--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.8.1",
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "next": "^14.2.18",
